--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,10 @@
 <!--             <groupId>org.springframework.boot</groupId> -->
 <!--             <artifactId>spring-boot-starter-data-jpa</artifactId> -->
 <!--         </dependency> -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.springframework.boot</groupId> -->
+<!--             <artifactId>spring-boot-starter-data-mongodb</artifactId> -->
+<!--         </dependency> -->
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
